<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputName"
        android:hint="@string/label_name"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <EditText
        android:id="@+id/inputEmail"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <EditText
        android:id="@+id/inputPassword"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_marginTop="12dp"
        android:text="@string/action_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
