<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu_home"
        app:title="@string/app_name" />

    <LinearLayout
        android:padding="12dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/inputSearch"
            android:hint="@string/action_search_hint"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@android:drawable/editbox_background_normal" />

        <ImageButton
            android:id="@+id/btnClear"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/action_remove"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:layout_weight="1" />

</LinearLayout>
